выполнение и отмена заданий + изменение заявки
